--- a/KhajiitEarsShow/KhajiitEarsShow.csproj
+++ b/KhajiitEarsShow/KhajiitEarsShow.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Mutagen.Bethesda" Version="0.13.5" />
-        <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.0.6" />
+        <PackageReference Include="Mutagen.Bethesda" Version="0.19.5" />
+        <PackageReference Include="Mutagen.Bethesda.FormKeys.SkyrimSE" Version="1.0.0" />
+        <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.10.12" />
     </ItemGroup>
 
 </Project>
